--- a/run.html
+++ b/run.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <audio id="completionSound" src="greedy.mp3"></audio>
+    <audio id="completionSound" src="uw.mp3"></audio>
     <div class="workout-list">
         <h2>✨ Frun Time! ✨</h2>
         <ul id="workouts">
